# polynomial-interval-optimization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: FindIPOPT.cmake
apps/: CMakeLists.txt
apps/Robot2D/: CMakeLists.txt
apps/Robot2D/src/: Problem1.cpp  contruct_filename_2D.cpp  test_Robot_2D.cpp
apps/Robot3D/: CMakeLists.txt
apps/Robot3D/include/: Problem3D.h  Problem3D.hxx  Problem3D_with_torque_limit.h  Problem3D_with_torque_limit.hxx  construct_filename_3D.h
apps/Robot3D/src/: Problem3D.cpp  Problem3D_with_torque_limit.cpp  contruct_filename_3D.cpp  eval_3D.cpp  test_Robot_3D.cpp
apps/basis_function_criteria/: CMakeLists.txt
apps/basis_function_criteria/src/: BasisFunctionsCriteria.cpp
apps/basis_function_plotting/: CMakeLists.txt
apps/basis_function_plotting/src/: PlotBasisFunctions.cpp
apps/data_formatting/: CMakeLists.txt
apps/data_formatting/include/: data_format.h  data_format3D.h
apps/data_formatting/src/: create_files.cpp  create_files_3D.cpp  create_files_robot_3D.cpp  create_files_save.cpp  data_format.cpp  data_format3D.cpp  select_files.cpp
apps/test2D/: CMakeLists.txt
apps/test2D/include/: ProblemPoint2D.h  ProblemPoint2D.hxx
apps/test2D/src/: ProblemPoint2D.cpp  test2D.cpp
apps/test_polynomial/: CMakeLists.txt
apps/test_polynomial/include/: ProblemPoly.h  ProblemPoly.hxx
apps/test_polynomial/src/: ProblemPoly.cpp  eval_polynome.cpp
basis_functions/apps/: GetDeterminant.cpp  OptimBasisFunctionInterval.cpp  PlotBasisFunctions.cpp  ProblemBasisFunctionComputation.cpp  ProblemBasisFunctionComputation.h  ProblemBasisFunctionComputation.hxx
basis_functions/include/: AbstractBasisFunction.h  ApproxMinvoFunction.h  BSplinesFunction.h  BasisFunctionNLP.h  BasisFunctionProblem.hxx  BernsteinFunction.h  ChooseBasisFunction.h  MinNoFunction.h  MinVariance.h  MinVoFunction.h  OptimizedBasisFunction.h  Recursive2Function.h  RecursiveBSplinesFunction.h  RecursiveBSplinesFunction2.h  RecursiveFunction.h
basis_functions/src/: AbstractBasisFunction.cpp  BSplinesFunction.cpp  BasisFunctionNLP.cpp  BernsteinFunction.cpp  ChooseBasisFunction.cpp  MinNoFunction.cpp  MinVariance.cpp  MinVoFunction.cpp  OptimizedBasisFunction.cpp  Recursive2Function.cpp
include/: AbstractCSP.h  MogsInterval.h  MogsIntervalChief.h
model/: kuka_lwr.xml  kuka_lwr_4dof.xml
model/wrl/: base.wrl  link1.wrl  link1a.wrl  link2.wrl  link3.wrl  link4.wrl  link5.wrl  link6.wrl  link7.wrl
scriptEval3D/: Eval3D.sh  all_Eval3D.sh
scripts/: all_jobs.sh  all_jobs3D.sh  job.sh  job3D.sh
scripts/Eval3D/: Eval3D.sh  all_Eval3D.sh
scripts/bis_2D/: all_fast_jobs.sh  all_jobs.sh  fast_job.sh  job.sh  job_extra_memory.sh  job_long.sh  long_job.sh
scripts/bis_3D/: all_jobs3D.sh  job3D.sh  job3D_extra_memory.sh  job3D_long.sh
scripts/cont_2D/: all_jobs.sh  job.sh  job_long.sh
scripts/cont_3D/: all_jobs3D.sh  job3D.sh  job3D_long.sh
scripts/interval_bis_2D/: all_jobs.sh  job.sh  long_job.sh
scripts/interval_bis_3D/: all_jobs3D.sh  job3D.sh  job3D_long.sh
scripts2D/: all_jobs.sh  job.sh
scripts3D/: all_jobs3D.sh
solvers/include/: AbstractSolver.h  BasisFunctionSolver.h  BissectionBasisFunctionSolver.h  BissectionIntervalSolver.h  ChooseSolver.h  CompareSolver.h  ContractionBasisFunctionSolver.h  ContractionIntervalSolver.h  IntervalEstimator.h  IntervalEstimatorContractor.h  Kronecker.h  Result.h
solvers/src/: AbstractSolver.cpp  BasisFunctionSolver.cpp  BissectionBasisFunctionSolver.cpp  BissectionIntervalSolver.cpp  ChooseSolver.cpp  CompareSolver.cpp  ContractionBasisFunctionSolver.cpp  ContractionIntervalSolver.cpp  DiscretizationSolver.cpp  IntervalEstimator.cpp  IntervalEstimatorContractor.cpp  Kronecker.cpp  Result.cpp
src/: MogsInterval.cpp  MogsIntervalChief.cpp
